--- a/public/index.html
+++ b/public/index.html
@@ -1,44 +1,136 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Food Truck Finder</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/styles.css"/>
-</head>
-<body>
-  <div class="container">
-    <header>
-      <div class="logo">
-        <a href="/" class="logo__link">
-          <img src="/img/foodTruck.svg" alt="Food Truck Finder Food Truck"/>
-        </a>
-      </div>
-      <h1 class="pageHeading">
-        <span class="pageHeading__word">Food</span>
-        <span class="pageHeading__word">Truck</span>
-        <span class="pageHeading__word">Finder</span>
-      </h1>
-      <nav id="foodTruckNav">
-        <ul class="foodTruckNav__list">
-          <li class="foodTruckNav__item">
-            <a id="allTrucks" href="/food-trucks" class="navLink">All Trucks</a>
-          </li>
-          <li class="foodTruckNav__item">
-            <a id="foodTypes" href="/food-types" class="navLink">Food Types</a>
-          </li>
-          <li class="foodTruckNav__item">
-            <a id="today" href="/today" class="navLink">Today</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <section role="main">
-      <div id="results"></div>
-    </section>
-  </div>
+<html>
+  <head>
+    <!-- Meta -->
+    <title>Yelp</title>
+    <meta charset="utf-8" />
 
-  <script src="/js/templates/templates.js"></script>
-  <script src="/js/main.bundled.js"></script>
-</body>
+    <!-- CSS -->
+ 
+    <link rel="stylesheet" href="css/style.css" />
+     <link rel="stylesheet" href="css/normalize.css" />
+
+    <!-- Fonts -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Raleway|Josefin+Sans:400,700" />
+    <style>
+
+    html {
+	  background-image: url('img/restaurant.jpg');
+	  background-position: center center;
+	  background-repeat: no-repeat;
+	  background-size: cover;
+	  height: 100%;
+	  overflow: hidden;
+	  font-family: 'Josefin Sans', 'Helvetica Neue', Helvetica, Arial, Sans-serif;
+	  font-size: 18px;
+	}
+
+	body {
+	  height: 100%;
+	}
+    </style>
+  </head>
+ 
+  <body>
+    <header>
+      <h1><a href="/">Callback Yelp</a></h1>
+    </header>
+
+    <!-- Active entry -->
+    <div id="entry"></div>
+
+    <!-- Handlebars templates --> 
+    <script type="text/x-handlebars-template" id="entry-template">
+      <div class="map"></div>
+
+      <div class="feature">
+        Welcome to<br />
+        {{#if editing}}
+          <input type="text" name="name" value="{{ activeEntryData.name }}" />
+        {{else}}
+          {{#if creating}}
+            <input type="text" name="name" />
+          {{else}}
+            <span>{{ activeEntryData.name }}</span>
+          {{/if}}
+        {{/if}}
+
+        {{#if viewing}}
+          <div class="dropdown">
+            <button>&#x25BE;</button>
+
+            <select>
+              <option value="-1">Pick location...</option>
+
+              {{#each entries}}
+                <option value="{{ _id }}">{{ name }}</option>
+              {{/each}}
+            </select>
+          </div>
+        {{/if}}
+
+        <br />
+        <div class="actions">
+          {{#if editing}}
+            <button class="teal update">Update</button>
+          {{else}}
+            {{#if creating}}
+              <button class="green add">Add</button>
+            {{else}}
+              <button class="green new">New</button>
+              <button class="teal edit">Edit</button>
+              <button class="red delete">Delete</button>
+            {{/if}}
+          {{/if}}
+
+          <!-- Error message -->
+          <div class="error"></div>
+        </div>
+      </div>
+
+      <div class="metadata">
+        <div class="address">
+          Address:<br />
+
+          {{#if editing}}
+            <input type="text" name="address" value="{{ activeEntryData.address }}" />
+          {{else}}
+            {{#if creating}}
+              <input type="text" name="address" />
+            {{else}}
+              <span>{{ activeEntryData.address }}</span>
+            {{/if}}
+          {{/if}}
+        </div>
+
+        <div class="description">
+          Description:<br />
+
+          {{#if editing}}
+            <textarea name="description">{{ activeEntryData.description }}</textarea>
+          {{else}}
+            {{#if creating}}
+              <textarea name="description"></textarea>
+            {{else}}
+              <span>{{ activeEntryData.description }}</span>
+            {{/if}}
+          {{/if}}
+        </div>
+      </div>
+
+      {{#if activeEntryData}}
+        <input class="id" type="hidden" value="{{ activeEntryData._id }}" />
+      {{/if}}
+    </script> 
+
+    <!-- Libraries -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.3.3/underscore-min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/handlebars.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="js/bundle.js"></script>        		
+
+
+  </body>
 </html>
